[gd_scene load_steps=4 format=3 uid="uid://d1hgvspw0q057"]

[ext_resource type="FontFile" uid="uid://nj5b3hat322u" path="res://Fonts/04B_30__.TTF" id="1_ukidp"]
[ext_resource type="Script" path="res://death_scene.gd" id="1_v6a2n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnkf3"]
bg_color = Color(0, 0, 0, 1)

[node name="death_scene" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6a2n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 0, 0, 0.25098)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 448.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ukidp")
theme_override_font_sizes/font_size = 50
text = "YOU DIED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 333.0
offset_top = 272.0
offset_right = 819.0
offset_bottom = 604.0
theme_override_constants/separation = 18

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ukidp")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_dnkf3")
text = "Retry"

[node name="LeaderboardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ukidp")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_dnkf3")
text = "Leaderboard"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ukidp")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_dnkf3")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
